--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ subtitle: A playground for testing Universal analytics VS Classic
 # When working locally use jekyll serve --baseurl '' so that you can view everything at localhost:4000
 # See http://jekyllrb.com/docs/github-pages/ for more info
 #baseurl: ''
-baseurl: ''
+baseurl: '/ga-testing'
 
 # Author/Organization info to be displayed in the templates
 author:
