--- a/_config.yml
+++ b/_config.yml
@@ -30,11 +30,11 @@ navigation:
 - text: Home
   url: index.html
   internal: true
-- text: Classic Analytics
-  url: analytics_classic.html
+- text: Example page 1
+  url: page-1.html
   internal: true
-- text: Universal Analytics
-  url: analytics_universal.html
+- text: Example page 1
+  url: page-1.html
   internal: true
 - text: Brooklyn Weather
   url: http://www.weather.com/weather/today/11238:4:US
